Changed the signin to be prettier. Working on getting the modal working still.

--- a/public/css/sign-in.css
+++ b/public/css/sign-in.css
@@ -43,6 +43,8 @@ body {
   border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
+  margin-bottom: -1px;
+  border-right-left-radius: 0;
+  border-right-right-radius: 0;
+}
   
