--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5388,7 +5388,7 @@ button.close {
   bottom: 0;
   left: 0;
   z-index: 1050;
-  display: block;
+  display: none;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   outline: 0;
