--- a/public/css/jquery-ui.css
+++ b/public/css/jquery-ui.css
@@ -53,8 +53,6 @@
 .ui-front {
 	z-index: 100;
 }
-
-
 /* Interaction Cues
 ----------------------------------*/
 .ui-state-disabled {
@@ -312,6 +310,7 @@ button.ui-button::-moz-focus-inner {
 	width: 17em;
 	padding: .2em .2em 0;
 	display: none;
+	z-index: 2000 !important;
 }
 .ui-datepicker .ui-datepicker-header {
 	position: relative;
