Redid some route names.

--- a/public/css/sign-in.css
+++ b/public/css/sign-in.css
@@ -9,7 +9,7 @@ body {
   color:#262626;*/
   background:#716457;
   border-top:1px solid #453c34;
-  color: #FFFFFF;*/
+  color: #FFFFFF;
 }
 
 .form-signin {
