--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3513,7 +3513,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   line-height: 1;
   color: #555;
   text-align: center;
-  background-color: #eee;
+  background-color: #b0e0e6;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
