Fixed small bug with public events page

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3507,6 +3507,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   vertical-align: middle;
 }
 .input-group-addon {
+  min-width: 135px;
   padding: 6px 12px;
   font-size: 14px;
   font-weight: normal;
